[package]
name = "network_fetch"
version = "0.1.0"
edition = "2021"
description = "A modular network fetch library for HTTP requests"

[lib]
name = "network_fetch"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
reqwest = { version = ">=0.11, <0.12", features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
html_parser = { path = "../html_parser" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }