[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# Servo Browser Engine — echter Rust-nativer Renderer, kein WebView
servo = "0.1.0"
keyboard-types = "0.8"

# Fenster & Event-Loop
winit = "0.30"
raw-window-handle = "0.6"

# Geometrie-Typen die Servo intern nutzt
euclid = "0.22"
dpi = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# URL-Handling
url = "2"

[profile.release]
# RAM-Optimierung: LTO reduziert Binary-Größe und hilft dem OS beim Paging
lto = "thin"
opt-level = 2
codegen-units = 1
strip = true
